smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/conflicting-trait-def.smithy
// shape name `deprecated` conflicts with imported shape `smithy.api#deprecated`
use smithy.api#deprecated

namespace smithy.example

@trait
structure deprecated {}
